--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ button {
   display: inline-block;
   position: absolute;
   left: 25%;
-  right: 25px;
+  right: 25%;
   background-color: #fff;
   height: 2px;
   max-width: 100%;
@@ -200,10 +200,9 @@ nav #menu-panel button:hover {
 -------------------------------------------*/
 #home {
   height: 720px; /* ホームセクションの高さを設定 */
+  display: flex;
   position: relative; /* 相対位置を設定 */
   /* 画像フェードインアニメーション */
-  /* 画像フェードインアニメーションのキーフレーム */
-  /* アニメションここまで */
 }
 #home .fade li {
   width: 75%; /* 画像の幅を設定 */
@@ -239,6 +238,8 @@ nav #menu-panel button:hover {
   right: 0; /* 右端に配置 */
   box-shadow: inset 0px 0px 20px 20px #fff; /* 影を追加 */
 }
+
+/* 画像フェードインアニメーションのキーフレーム */
 @keyframes fade {
   0% {
     opacity: 0;
@@ -256,31 +257,32 @@ nav #menu-panel button:hover {
     opacity: 0;
   } /* そこから100%まで非表示の状態を維持する */
 }
-#home .home-title-contents {
+/* アニメションここまで */
+.home-title-contents {
   position: absolute;
   content: "";
   top: 300px;
   max-width: 100%;
   padding: 0 10%;
 }
-#home .home-title-contents h2.page-title {
+.home-title-contents h2.page-title {
   font-size: 2.875rem;
   font-weight: 700;
   text-shadow: 0 5px 5px #fff;
 }
-#home .home-title-contents button {
+.home-title-contents button {
   color: #fff;
   font-size: 1.5rem;
   display: block;
   width: 100%;
-  padding: 13px 50px;
+  padding: 13px 35px;
   margin-top: 33px;
   border-bottom: 6px solid #9A0413;
   border-radius: 10px;
   transition: transform 0.3s ease, opacity 0.3s ease;
   position: relative;
 }
-#home .home-title-contents button::after {
+.home-title-contents button::after {
   position: absolute;
   content: "";
   top: 26px;
@@ -291,7 +293,7 @@ nav #menu-panel button:hover {
   border-right: 3px solid #fff;
   transform: rotate(45deg);
 }
-#home .home-title-contents button:hover {
+.home-title-contents button:hover {
   transform: scale(1.07); /* ホバー時にサイズを105%に */
   opacity: 0.9;
 }
@@ -322,7 +324,7 @@ nav #menu-panel button:hover {
   align-items: center;
   width: 50%;
   background-color: #fff;
-  padding: 5% 0;
+  padding: 5%;
   margin: 20px 0;
   opacity: 0;
 }
@@ -413,7 +415,7 @@ nav #menu-panel button:hover {
   background-color: #E9F1FB;
 }
 #voice .voice-contents .profile .profile-text p {
-  text-align: justify;
+  text-align: left;
   letter-spacing: 1.5px;
 }
 
@@ -480,7 +482,7 @@ nav #menu-panel button:hover {
 -------------------------------------------*/
 #free-trail {
   text-align: center;
-  padding: 123px 0 120px;
+  padding: 120px 0;
 }
 #free-trail .section-title {
   font-size: 2rem;
@@ -498,7 +500,7 @@ nav #menu-panel button:hover {
   font-size: 1.75rem;
   font-weight: 700;
   width: 100%;
-  padding: 15px 0;
+  padding: 15px 20px;
   margin-top: 45px;
   border-radius: 47px;
   border: 3px solid #FF2A2A;
@@ -549,10 +551,203 @@ nav #menu-panel button:hover {
 /* レスポンシブ・ブレークポイント900px
 ------------------------------- */
 @media screen and (max-width: 900px) {
+  .section-title {
+    font-size: 1.75rem;
+  }
+  .section-title::after {
+    bottom: -16px;
+    width: 80px;
+  }
   #home,
-  #header,
-  #free-trail,
   .inner {
     padding: 0 15px;
   }
-}
+  /*
+  メニュー
+  ================================================ */
+  /* 開閉ボタン */
+  #menu-open {
+    width: 75px;
+    height: 75px;
+    /*-------------------------------------------
+    ハンバーガーメニューのアイコン線
+    -------------------------------------------*/
+    /* 平時の位置 */
+    /* クリック時に横アイコンが斜めになる */
+  }
+  #menu-open span:nth-of-type(1) {
+    top: 26px;
+  }
+  #menu-open span:nth-of-type(2) {
+    top: 37px;
+  }
+  #menu-open span:nth-of-type(3) {
+    top: 48px;
+  }
+  #menu-open.active span:nth-of-type(1) {
+    top: 30px;
+    transform: translateY(6px) rotate(-45deg);
+    max-width: 50%;
+  }
+  #menu-open.active span:nth-of-type(2), #menu-open.active span:nth-of-type(3) {
+    top: 30px;
+    transform: translateY(6px) rotate(45deg);
+    max-width: 50%;
+  }
+  /* スライドメニューパネル */
+  nav #menu-panel .slide-logo {
+    top: 20px;
+    left: 25px;
+  }
+  nav #menu-panel .menu-list {
+    margin-top: 110px;
+  }
+  /*-------------------------------------------
+  #header
+  -------------------------------------------*/
+  #header {
+    padding: 20px 25px;
+  }
+  /*-------------------------------------------
+  #home
+  -------------------------------------------*/
+  #home {
+    height: 487px;
+    flex-direction: column;
+    /* 画像フェードインアニメーション */
+    /* アニメションここまで */
+  }
+  #home .fade {
+    height: 300px;
+  }
+  #home .fade li {
+    width: 100%;
+    inset: 0;
+    /* 画像のサイズを調整 */
+    /* 画像に影を追加 */
+  }
+  #home .fade li img {
+    height: 300px;
+  }
+  #home .fade li::after {
+    bottom: 185px; /* 下端に配置 */
+  }
+  #home .home-title-contents {
+    height: 187px;
+    padding: 0;
+    margin-top: 315px;
+    position: sticky;
+    top: 0;
+  }
+  #home .home-title-contents h2.page-title {
+    font-size: 1.75rem;
+  }
+  #home .home-title-contents button {
+    margin-top: 10px;
+  }
+  #home .home-title-contents button:hover {
+    transform: scale(1);
+  }
+  /*-------------------------------------------
+  #choice
+  -------------------------------------------*/
+  #choice {
+    padding: 85px 0 60px;
+  }
+  /*-------------------------------------------
+  #online-native
+  -------------------------------------------*/
+  #online-native {
+    padding: 20px 0;
+  }
+  #online-native .online-native-items {
+    width: 100%;
+  }
+  #online-native .online-native-items:nth-of-type(1) {
+    margin-right: 15px;
+  }
+  #online-native .online-native-items:nth-of-type(2) {
+    margin-left: 15px;
+  }
+  #online-native .fifty {
+    width: 0%;
+  }
+  /*-------------------------------------------
+  #voice
+  -------------------------------------------*/
+  #voice {
+    padding: 80px 0;
+  }
+  #voice .voice-contents {
+    margin-top: 60px;
+  }
+  #voice .voice-contents .profile {
+    flex-direction: column-reverse;
+    margin-top: 40px;
+  }
+  #voice .voice-contents .profile:nth-last-of-type(2) {
+    flex-direction: column-reverse;
+  }
+  #voice .voice-contents .profile:nth-last-of-type(2) .profile-text:nth-of-type(2)::after {
+    right: auto;
+  }
+  #voice .voice-contents .profile .profile-img {
+    width: 100%;
+    margin-top: 30px;
+  }
+  #voice .voice-contents .profile .profile-text {
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #voice .voice-contents .profile .profile-text::after {
+    top: auto;
+    bottom: -10px;
+    left: 48%;
+  }
+  /*-------------------------------------------
+  #summary
+  -------------------------------------------*/
+  #summary .summary-items {
+    display: block;
+    margin-top: 60px;
+  }
+  #summary .summary-items .summary-item {
+    width: 100%;
+    padding: 30px 35px 33px 30px;
+  }
+  #summary .summary-items .summary-item:nth-of-type(3) {
+    margin-bottom: 30px;
+  }
+  /*-------------------------------------------
+  #free-trail
+  -------------------------------------------*/
+  #free-trail {
+    padding: 80px 15px;
+  }
+  #free-trail .section-title {
+    font-size: 1.5rem;
+  }
+  #free-trail p {
+    font-size: 1rem;
+  }
+  #free-trail button {
+    font-size: 1.5rem;
+    margin-top: 40px;
+  }
+  /*-------------------------------------------
+  #footer
+  -------------------------------------------*/
+  #footer .footer-items .footer-item {
+    width: 50%;
+    margin-bottom: 32px;
+  }
+  #footer .footer-items .footer-item h4 {
+    font-size: 0.9375rem;
+  }
+  #footer .footer-items .footer-item li a {
+    font-size: 0.75rem;
+  }
+} /* /@mediaここまで */
