--- a/sass/style.scss
+++ b/sass/style.scss
@@ -96,7 +96,7 @@ button {
         display: inline-block;
         position: absolute;
         left: 25%;
-        right: 25px;
+        right: 25%;
         background-color: #fff;
         height: 2px;
         max-width: 100%;
@@ -215,9 +215,10 @@ nav {
 -------------------------------------------*/
 #home {
     height   : 720px;    /* ホームセクションの高さを設定 */
+    display: flex;
     position : relative; /* 相対位置を設定 */
 
-/* 画像フェードインアニメーション */
+    /* 画像フェードインアニメーション */
     .fade {
         li {
             width   : 75%;      /* 画像の幅を設定 */
@@ -257,7 +258,7 @@ nav {
             }
           }
         }
-
+}
         /* 画像フェードインアニメーションのキーフレーム */
         @keyframes fade {
             0% { opacity: 0;} /* 非表示の状態からスタート */
@@ -267,8 +268,7 @@ nav {
           100% { opacity: 0;} /* そこから100%まで非表示の状態を維持する */
         }
 
-
-/* アニメションここまで */
+        /* アニメションここまで */
 
 
     .home-title-contents {
@@ -289,7 +289,7 @@ nav {
             font-size: 1.5rem;
             display: block;
             width: 100%;
-            padding: 13px 50px;
+            padding: 13px 35px;
             margin-top: 33px;
             border-bottom: 6px solid #9A0413;
             border-radius:10px;
@@ -314,7 +314,7 @@ nav {
             }
         }
     }
-}
+
 
 /*-------------------------------------------
 #choice
@@ -341,7 +341,7 @@ nav {
         @include flexMode(center);
         width: 50%;
         background-color: #fff;
-        padding: 5% 0;
+        padding: 5%;
         margin: 20px 0;
         opacity: 0;
         &:nth-of-type(1) {
@@ -431,7 +431,7 @@ nav {
                     background-color: #E9F1FB;
                 }
                 p {
-                    text-align: justify;
+                    text-align: left;
                     letter-spacing: 1.5px;
                 }
             }
@@ -507,7 +507,7 @@ nav {
 -------------------------------------------*/
 #free-trail {
     text-align: center;
-    padding: 123px 0 120px;
+    padding: 120px 0 ;
 
     .section-title {
         font-size: 2rem;
@@ -527,7 +527,7 @@ nav {
         font-size: 1.75rem;
         font-weight: 700;
         width: 100%;
-        padding: 15px 0;
+        padding: 15px 20px;
         margin-top: 45px;
         border-radius: 47px;
         border: 3px solid $red;
@@ -585,11 +585,253 @@ nav {
 /* レスポンシブ・ブレークポイント900px
 ------------------------------- */
 @media screen and (max-width: 900px) {
+    .section-title {
+        font-size: 1.75rem;
+        &::after {
+            bottom: -16px;
+            width: 80px;
+        }
+    }
     #home,
-    #header,
-    #free-trail,
     .inner {
         padding: 0 15px;
     }
-}
 
+    /*
+    メニュー
+    ================================================ */
+    /* 開閉ボタン */
+    #menu-open {
+        width: 75px;
+        height: 75px;
+
+        /*-------------------------------------------
+        ハンバーガーメニューのアイコン線
+        -------------------------------------------*/
+        /* 平時の位置 */
+        span:nth-of-type(1) {
+            top: 26px;
+        }
+        span:nth-of-type(2) {
+            top: 37px;
+        }
+        span:nth-of-type(3) {
+            top: 48px;
+        }
+
+        /* クリック時に横アイコンが斜めになる */
+        &.active span:nth-of-type(1) {
+            top: 30px;
+            transform: translateY(6px) rotate(-45deg);
+            max-width: 50%;
+        }
+        &.active span:nth-of-type(2),
+        &.active span:nth-of-type(3) {
+            top: 30px;
+            transform: translateY(6px) rotate(45deg);
+            max-width: 50%;
+        }
+    }
+
+    /* スライドメニューパネル */
+    nav {
+        #menu-panel {
+            .slide-logo {
+                top: 20px;
+                left: 25px;
+            }
+
+            .menu-list {
+                margin-top: 110px;
+            }
+        }
+    }
+
+    /*-------------------------------------------
+    #header
+    -------------------------------------------*/
+    #header {
+        padding: 20px 25px;
+    }
+
+    /*-------------------------------------------
+    #home
+    -------------------------------------------*/
+    #home {
+        height: 487px;
+        flex-direction: column;
+
+        /* 画像フェードインアニメーション */
+        .fade {
+            height: 300px;
+
+            li {
+                width: 100%;
+                inset: 0;
+
+                /* 画像のサイズを調整 */
+                img {
+                    height: 300px;
+                }
+
+                 /* 画像に影を追加 */
+                &::after {
+                    bottom     : 185px;        /* 下端に配置 */
+                }
+            }
+        }/* アニメションここまで */
+
+        .home-title-contents {
+            height: 187px;
+            padding: 0;
+            margin-top: 315px;
+            position: sticky;
+            top: 0;
+
+            h2.page-title {
+                font-size: 1.75rem;
+            }
+
+            button {
+                margin-top: 10px;
+
+                &:hover {
+                    transform: scale(1);
+                }
+            }
+        }
+    }
+
+    /*-------------------------------------------
+    #choice
+    -------------------------------------------*/
+    #choice {
+        padding: 85px 0 60px;
+    }
+
+    /*-------------------------------------------
+    #online-native
+    -------------------------------------------*/
+    #online-native {
+        padding: 20px 0;
+
+        .online-native-items {
+            width: 100%;
+
+            &:nth-of-type(1) {
+                margin-right: 15px;
+            }
+            &:nth-of-type(2) {
+                margin-left: 15px;
+            }
+        }
+
+        .fifty {
+          width: 0%;
+        }
+    }
+
+    /*-------------------------------------------
+    #voice
+    -------------------------------------------*/
+    #voice {
+        padding: 80px 0;
+
+        .voice-contents {
+            margin-top: 60px;
+
+            .profile {
+                flex-direction: column-reverse;
+                margin-top: 40px;
+                &:nth-last-of-type(2) {
+                    flex-direction: column-reverse;
+                    .profile-text:nth-of-type(2)::after {
+                        right: auto;
+                    }
+                }
+
+               .profile-img {
+                width: 100%;
+                margin-top: 30px;
+               }
+
+               .profile-text {
+                width: 100%;
+                margin: 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                &::after {
+                    top: auto;
+                    bottom: -10px;
+                    left: 48%;
+                }
+               }
+            }
+        }
+    }
+
+    /*-------------------------------------------
+    #summary
+    -------------------------------------------*/
+    #summary {
+
+        .summary-items {
+            display: block;
+            margin-top: 60px;
+
+            .summary-item {
+                width: 100%;
+                padding: 30px 35px 33px 30px;
+                &:nth-of-type(3) {
+                    margin-bottom: 30px;
+                }
+            }
+        }
+    }
+
+    /*-------------------------------------------
+    #free-trail
+    -------------------------------------------*/
+    #free-trail {
+        padding: 80px 15px;
+
+        .section-title {
+            font-size: 1.5rem;
+        }
+
+        p {
+            font-size: 1rem;
+        }
+
+        button {
+            font-size: 1.5rem;
+            margin-top: 40px;
+        }
+    }
+
+    /*-------------------------------------------
+    #footer
+    -------------------------------------------*/
+    #footer {
+
+        .footer-items {
+
+            .footer-item {
+                width: 50%;
+                margin-bottom: 32px;
+
+                h4 {
+                    font-size: 0.9375rem;
+                }
+
+                li {
+
+                    a {
+                        font-size: 0.75rem;
+                    }
+                }
+            }
+        }
+    }
+}/* /@mediaここまで */
